[gd_scene load_steps=11 format=3 uid="uid://4xtbpvksxxbp"]

[ext_resource type="Script" uid="uid://bh8pkx8kmyryx" path="res://script/arumi_helper.gd" id="1_4d5b8"]
[ext_resource type="Texture2D" uid="uid://127y7o5nxnc7" path="res://assets/arumi_icon/State=Group 54.png" id="2_hekpx"]
[ext_resource type="Texture2D" uid="uid://dn5ho4jtum23a" path="res://assets/arumi_icon/Group 52.png" id="3_r5tbx"]
[ext_resource type="Texture2D" uid="uid://dvmlbuxblxg08" path="res://assets/arumi_icon/Group 51.png" id="4_5r3m7"]
[ext_resource type="FontFile" uid="uid://canqi47ujuyl7" path="res://assets/fonts/Dosis-Medium.ttf" id="4_bjly0"]
[ext_resource type="Texture2D" uid="uid://bhqn1jchxlcy" path="res://assets/arumi_icon/Rectangle 9761.png" id="5_ii31g"]

[sub_resource type="Animation" id="Animation_edn2j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Group51:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.396712]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Group51:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("tugas:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("tugas:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Group51:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.78, 0.78)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Group51:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(37, 20)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionPolygon2D2:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mntgi"]
resource_name = "show_aruni"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Group51:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.290604, 0.100206]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Group51:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("tugas:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.505435), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("tugas:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Group51:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.78, 0.78), Vector2(1.2, 1.2)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Group51:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(38, -22), Vector2(31, -94)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionPolygon2D2:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aqjf7"]
_data = {
&"RESET": SubResource("Animation_edn2j"),
&"show_aruni": SubResource("Animation_mntgi")
}

[sub_resource type="Gradient" id="Gradient_8e34y"]
colors = PackedColorArray(0.964742, 0.964742, 0.964742, 1, 0.816593, 0.830103, 0.823363, 1)

[node name="aruni_helper" type="Area2D"]
script = ExtResource("1_4d5b8")

[node name="icon_aruni" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_hekpx")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-173, -44, -17, -77, 0, -42, 174, -83, 175, -58, 170, 117, -139, 117)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_aqjf7")
}

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-26, -87, -16, -137, 22, -168, 76, -170, 137, -127, 143, -85, 167, -112, 419, -77, 372, 58, 243, 36, 138, 57, 144, -5, -10, -48)

[node name="State=group54" type="Sprite2D" parent="."]
texture = ExtResource("2_hekpx")

[node name="tugas" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(146, 70)
rotation = -0.066692
texture = ExtResource("3_r5tbx")
offset = Vector2(140, -90)

[node name="Line2D" type="Line2D" parent="tugas"]
position = Vector2(59, -136)
rotation = 0.103876
points = PackedVector2Array(-10.2763, 17.1581, 94.346, 27.3649, 168.508, 34.7147)
closed = true
width = 50.0
gradient = SubResource("Gradient_8e34y")

[node name="Label" type="Label" parent="tugas"]
offset_left = 41.1255
offset_top = -135.561
offset_right = 246.126
offset_bottom = -93.5607
rotation = 0.066624
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_bjly0")
theme_override_font_sizes/font_size = 33
text = "Butuh Bantuan?"

[node name="Group51" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(37, 20)
rotation = 0.396712
scale = Vector2(0.78, 0.78)
texture = ExtResource("4_5r3m7")

[node name="Rectangle9761" type="Sprite2D" parent="Group51"]
show_behind_parent = true
position = Vector2(-10, 44)
texture = ExtResource("5_ii31g")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
